Java Data Structure

--- a/linkedListPixV2/.project
+++ b/linkedListPixV2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>linkedListPixV2</name>
+	<name>linkedListPV2</name>
 	<comment></comment>
 	<projects>
 	</projects>
